# HRMS-Lite-Js

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  QUICK_START_DEPLOYMENT.md  README.md  build.sh  deploy.sh  render.yaml
.github/workflows/: deploy.yml
.render/: nixpacks.toml
backend/: .env.example  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Badge.jsx  Button.jsx  Card.jsx  EmptyState.jsx  Input.jsx  Modal.jsx  Select.jsx
frontend/src/pages/: AttendanceManagement.jsx  Dashboard.jsx  EmployeeManagement.jsx
